// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTimelineItem is rendered 1`] = `
<div
  class="css-88d0w-euiTimelineItem"
>
  <div
    class="css-1grznaw-euiTimelineItemIcon-center"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="dot"
        class="euiAvatar euiAvatar--s euiAvatar--user css-ifcftd-euiAvatar-s-user-subdued"
        role="img"
        title="dot"
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        >
          dot
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</div>
`;

exports[`EuiTimelineItem props verticalAlign center is rendered 1`] = `
<div
  class="css-88d0w-euiTimelineItem"
>
  <div
    class="css-1grznaw-euiTimelineItemIcon-center"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="dot"
        class="euiAvatar euiAvatar--s euiAvatar--user css-ifcftd-euiAvatar-s-user-subdued"
        role="img"
        title="dot"
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        >
          dot
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</div>
`;

exports[`EuiTimelineItem props verticalAlign top is rendered 1`] = `
<div
  class="css-88d0w-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="dot"
        class="euiAvatar euiAvatar--s euiAvatar--user css-ifcftd-euiAvatar-s-user-subdued"
        role="img"
        title="dot"
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        >
          dot
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <p>
      I'm the children
    </p>
  </div>
</div>
`;
